--- a/home/homecss.css
+++ b/home/homecss.css
@@ -56,6 +56,53 @@ a.active,a:hover{
     display: none;
 }
 
+/*search bar */
+.search-box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background:#2f3640;
+    height: 40px;
+    border-radius:40px;
+}
+.search-box:hover > .search-txt{
+    width: 240px;
+    padding: 0 6px;  
+}
+
+.search-box:hover > .search-btn{
+    background:white;
+
+}
+
+.search-btn{
+    color: #e84118;
+    float: right;
+    width:40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #2f3640;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    transition:0.4s;
+}
+
+.search-txt{
+    border:none;
+    background: none;
+    outline:none;
+    float: left;
+    padding:0;
+    color:white;
+    font-size:16px;
+    transition: 0.4s;
+    line-height:40px;
+    width: 0px; /* if you want big search button fix this to 240px*/
+}
+ 
+
 /* phone view */
 @media (max-width:952px){
     label.logo{
@@ -103,3 +150,4 @@ section{
     background-size: cover;
     height: calc(100vh - 80px);
 }
+
