--- a/sign in/style.css
+++ b/sign in/style.css
@@ -8,9 +8,9 @@ body{
 	}
 .sign-in{
 	width:320px;
-	height:240px;
+	height:420px;
 	background:#000;
-	color:#fff;
+	color:rgb(160, 136, 136);
 	top:50%;
 	left:50%;
 	position:absolute;
@@ -19,15 +19,15 @@ body{
 	padding:70px 30px;
 	}
 
-	.travel{
+.logo{
 	width:100px;
 	height:100px;
 	border-radius:50%;
 	position:absolute;
 	top:-50px;
-	left:clac(50%-50%px);
+	left:clac(50% - 50%px);
 	}
-	h1{
+h1{
 		margin:0;
 		padding:0 0 20px;
 		text-align:center;
@@ -63,7 +63,7 @@ body{
 	font-size:18px;
 	border-radius:20px;
 }
-.loginbox input[tupe="sumbit"]:hover
+.loginbox input[type="sumbit"]:hover
 {
 	cursor:pointer;
 	background:#ffc107;
@@ -74,7 +74,7 @@ body{
 	text-decoration:none;
 	font-size:12px;
 	line-height:20px;
-	color:darkgrey;
+	color:rgb(61, 58, 58);
 }
 
 .loginbox a:hover
