--- a/home/homecss.css
+++ b/home/homecss.css
@@ -198,6 +198,7 @@ a.active,a:hover{
         text-align: center;
 }  */
 
+/*
 section{
     background: url(images/peocock.jpg) no-repeat;
     background-size: cover;
@@ -205,3 +206,81 @@ section{
     opacity: 85%;
 }
 
+*/
+
+/*Slide show*/
+slider{
+    display:block;
+    width:100%;
+    height:100%;
+    background-color: #1f1f1f;
+    overflow: hidden;
+    position:absolute;
+}
+slider > *{
+    position:absolute;
+    display:block;
+    width:100%;
+    height:100%;
+    background-color:#1f1f1f;
+    animation: slide 12s infinite;
+    overflow:hidden;
+    opacity: 50%;
+}
+
+/*child 1*/
+slide:nth-child(1){
+    left:0%;
+    animation-delay:-1s;
+    background-image: url(images/alla9arch.jpg);
+    background-size: cover;
+    background-position:center;
+    opacity: 50%;
+}
+
+/*child 2*/
+slide:nth-child(2){
+    animation-delay:2s;
+    background-image: url(images/beachside.jpg);
+    background-size: cover;
+    background-position:center;
+    opacity: 50%;
+}
+
+/*child 3*/
+slide:nth-child(3){
+    left:0%;
+    animation-delay:5s;
+    background-image: url(images/peocock.jpg);
+    background-size: cover;
+    background-position:center;
+    opacity: 50%;
+}
+
+/*child 4*/
+slide:nth-child(4){
+    left:0%;
+    animation-delay:8s;
+    background-image: url(images/sigiriya.jpg);
+    background-size: cover;
+    background-position:center;
+    opacity: 50%;
+}
+
+slide p{
+    font-family:compressed;
+    font-size:70px;
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    margin-top: 340px;
+    color: #fff;
+}
+@keyframes slide {
+    0% { left: 100%; width: 100%;}
+    5% { left: 0%;}
+    25% {left: 0%;}
+    30% { left: -100%; width: 100%;}
+    30.0001% { left: 100%; width: 0%;}
+    100%{ left: 100%; width: 0%;}
+}
