--- a/home/homecss.css
+++ b/home/homecss.css
@@ -98,7 +98,7 @@ a.active,a:hover{
     outline:none;
     float: left;
     padding:0;
-    color:rgb(255, 255, 255);
+    color:white;
     font-size:16px;
     transition: 0.4s;
     line-height:40px;
