--- a/Sigiriya/places_template.css
+++ b/Sigiriya/places_template.css
@@ -26,12 +26,13 @@ img {vertical-align: middle;}
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: white;
+  color:  white;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  
 }
 
 /* Position the "next button" to the right */
@@ -42,7 +43,7 @@ img {vertical-align: middle;}
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color:  #219c2c;
 }
 
 /* Caption text */
