--- a/home/homecss.css
+++ b/home/homecss.css
@@ -21,11 +21,19 @@ label.logo{
     padding: 0 100px;
     font-weight: bold;
 }
+label.logo:hover{
+    text-shadow: 0px 5px 10px black;
+    transition: .6s;  
+}
 nav ul{
-    float: right;
+    position:absolute;
+    /*float: right;*/
     margin-right:20px;
+    top: 30px;
+    left: 30%;
 }
 nav ul li{
+    position:sticky;
     display: inline-block;
     inline-height:80px;
     margin:0 5px;
@@ -56,6 +64,115 @@ a.active,a:hover{
 #check{
     display: none;
 }
+/* phone view */
+@media (max-width:952px){
+    label.logo{
+        font-size: 30px;
+        padding-left:50px;
+    }
+    nav ul li a{
+        font-size:16px;
+    }
+}
+
+@media (max-width:858px){
+    .checkbtn{
+        display:block;
+    }
+    ul{
+        position: fixed;
+        width:100%;
+        height: 100vh;
+        background:#2c3e50;
+        top:70px;
+        left: -100%;
+        text-align:center;
+        transition:all .5s;
+    }
+    nav ul li{
+        display:block;
+        margin:50px 0;
+        line-height:30px;
+    }
+    nav ul li a{
+        font-size:20px;
+    }
+    a:hover,a.active{
+        background:none;
+        color:#2acf38;
+    }
+    #check:checked ~ ul{
+        left: 0;
+    }
+}
+
+/***************Drop down lists******************/
+
+        /*
+        .dropbtn {
+          background-color: #4CAF50;
+          color: white;
+          padding: 16px;
+          font-size: 16px;
+          border: none;
+          cursor: pointer;
+        }
+        */
+        .dropdown {
+            position: relative;
+            display: inline-block;
+          }
+          
+          .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #2acf38;
+            min-width: 160px;
+            box-shadow: 10px 8px 16px 10px rgba(0,0,0,0.2);
+            z-index: 1;
+            font-family: Arial, Helvetica, sans-serif
+          }
+          
+          .dropdown-content a {
+            color: rgb(255, 255, 255);
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: center;
+          }
+          
+          .dropdown-content a:hover {background-color: #219c2c}
+          
+          .dropdown:hover .dropdown-content {
+            display: block;
+          }
+  
+          a#active_login{
+            background: #06380a;
+            transition: .5s;
+            
+          }
+          a#active_signup{
+            background: #51ee13;
+            transition: .5s;
+           
+          }
+       
+          a.login_hover:hover{
+          color: #2acf38;
+          }
+          
+          a.signup_hover:hover{
+          color: #000000;
+          }
+          
+  
+  
+         /* 
+          .dropdown:hover .dropbtn {
+            background-color: #3e8e41;
+          }
+          */
 
 
 
@@ -111,47 +228,6 @@ a.active,a:hover{
     }
 }
 
-/* phone view */
-@media (max-width:952px){
-    label.logo{
-        font-size: 30px;
-        padding-left:50px;
-    }
-    nav ul li a{
-        font-size:16px;
-    }
-}
-
-@media (max-width:858px){
-    .checkbtn{
-        display:block;
-    }
-    ul{
-        position: fixed;
-        width:100%;
-        height: 100vh;
-        background:#2c3e50;
-        top:80px;
-        left: -100%;
-        text-align:center;
-        transition:all .5s;
-    }
-    nav ul li{
-        display:block;
-        margin:50px 0;
-        line-height:30px;
-    }
-    nav ul li a{
-        font-size:20px;
-    }
-    a:hover,a.active{
-        background:none;
-        color:#2acf38;
-    }
-    #check:checked ~ ul{
-        left: 0;
-    }
-}
 /* Topics*/
 .topics{
     position: absolute; 
