--- a/home/Explore/test 1.css
+++ b/home/Explore/test 1.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background:url("green-bokeh-background-4.png");
+   /* background:url("green-bokeh-background-4.png"); */
     overflow: hidden;
 }
 .card {
@@ -59,7 +59,7 @@ body {
     grid-template-rows: 1fr;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
-    background: rgb(255,7,110);
+    background: #219c2c;
 
 }
 .card-stats .stat {
@@ -83,8 +83,8 @@ body {
     font-weight: 500;
 } 
 .card-stats .border {
-    border-left: 1px solid rgb(172,26,87);
-    border-right: 1px solid rgb(172,26,87);
+    border-left: 1px solid #ffffff;
+    border-right: 1px solid #ffffff;
 }
 .card-stats .value sup {
     font-size: 12px;
