--- a/Web Project/css/style.css
+++ b/Web Project/css/style.css
@@ -88,7 +88,7 @@ input[type="submit"]:focus
     padding: 40px;
     width: 300px;
     height: 400px;
-    background-image: url(image1.jpg);
+    background-image: url(image\ 1.jpg);
     background-size: cover;
     background-position: center;
 }
