--- a/home/about us/about.css/style.css
+++ b/home/about us/about.css/style.css
@@ -2,11 +2,13 @@ body{
 	margin: 0;
 	padding: 0;
 	font-family: Century Gothic;
+	
 }
 .header{
 	height: 100vh;
 	width: 100%;
 	background: url("image.jpg")no-repeat;
+	/*background-color: red;*/
 	background-size: cover;
 	background-position: center;
 }
