--- a/Agent login form/login.css
+++ b/Agent login form/login.css
@@ -22,7 +22,7 @@ body {
 .avatar {
     width: 100px;
     height: 100px;
-    border-radius: 50%
+    border-radius: 50%;
     position: absolute;
     top: -50px;
 }
