--- a/Agent login form/login.css
+++ b/Agent login form/login.css
@@ -17,6 +17,7 @@ body {
     position: absolute;
     transform: translate(-50%,-50%);
     box-sizing: border-box;
+    padding: 70px 30px;
 }
 
 .avatar {
@@ -25,5 +26,27 @@ body {
     border-radius: 50%;
     position: absolute;
     top: -50px;
-    left: calc(50% - 50px);
+    left: calc(50% - 50px); 
 }
+
+
+h1 {
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px;
+
+}
+
+.loginbox p {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+.loginbox input {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+
