--- a/registration(ranudi)/style.css
+++ b/registration(ranudi)/style.css
@@ -11,7 +11,7 @@ body{
 	width: 30px;
 	margin: white;
 	color: white;
-	background: :#5F9EA0;
+	background:#5F9EA0;
 	text-align: center;
 	border:1px solid #B0C4DE;
 	border-bottom: none;
