--- a/registration(ranudi)/style.css
+++ b/registration(ranudi)/style.css
@@ -3,13 +3,13 @@
 	padding: 0px;
 }
 body{
-	font-size: 10px;
+	font-size: 120%;
 	background: #F8F8FF;
 }
 
 .header{
-	width: 30px;
-	margin: white;
+	width: 30%;
+	margin: 50px auto 0px;
 	color: white;
 	background:#5F9EA0;
 	text-align: center;
@@ -19,7 +19,7 @@ body{
 	padding: 20px;
 }
 form{
-	width: 30px;
+	width: 30%;
 	margin: 0px auto;
 	padding: 20px;
 	border: 1px solid #B0C4DE;
@@ -29,4 +29,25 @@ form{
 .input-group{
 	margin: 10px 0px 10px 0px;
 	
+}
+.input-group label{
+	display: block;
+	text-align: left;
+	margin: 3px;
+}
+.input-group input {
+	height: 30px;
+	width: 93%;
+	padding: 5px 10px;
+	font-size: 16px;
+	border-radius: 5px;
+	border: 1px solid gray;
+}
+.btn{
+	padding: 10px;
+	font-size: 15px;
+	color: white;
+	background: #5F9EA0;
+	border: none;
+	border-radius: 5px;
 }
