--- a/register/style.css
+++ b/register/style.css
@@ -18,7 +18,15 @@ body{
 	border-radius: 10px 10px 0px 0px;
 	padding: 20px;
 }
-form{
+form {
+	width: 30%;
+	margin: 0px auto;
+	padding: 20px;
+	border: 1px solid #B0C4DE;
+	background: white;
+	border-radius: 0px 0px 10px 10px;
+}
+.content{
 	width: 30%;
 	margin: 0px auto;
 	padding: 20px;
@@ -50,4 +58,20 @@ form{
 	background: #5F9EA0;
 	border: none;
 	border-radius: 5px;
+}
+.error{
+	width: 92%;
+	margin: 0px auto;
+	padding: 10px;
+	border: 1px solid #a94442;
+	color: #a94442;
+	background: #f2dede;
+	border-radius: 5px;
+	text-align: left;
+}
+.success{
+	color: #3c763d;
+	background: #dff08d;
+	border: 1px solid #3c763d;
+	margin-bottom: 20px;
 }
