--- a/parallex effect/style.css
+++ b/parallex effect/style.css
@@ -22,7 +22,13 @@ header{
     position: relative;
     overflow: hidden;
 }
-
+.navtop {
+    text-decoration: none;
+    color: white;
+}
+.navtop span{
+    font-weight: 300;
+}
 header:after{
     content: '';
     position: absolute;
@@ -72,7 +78,7 @@ header:after{
     bottom: -200px;
     right: -30px;
 }
-
+/*
 nav{
     position: absolute;
     top: 0;
@@ -135,7 +141,7 @@ nav .container{
 .bar:after{
     transform: translateY(8px);
 }
-
+*/
 .big-title{
     position: absolute;
     z-index: 30;
