--- a/Agent signup form/signup.css
+++ b/Agent signup form/signup.css
@@ -34,3 +34,17 @@ body
     background: #000;
 
 }
+
+.register-right
+{
+    border: none;
+    background: #f8f8f8;
+    border-top-left-radius: 10% 50%;
+    border-bottom-left-radius: 10% 50%;
+    padding: 50px;
+}
+
+.register-right h2
+{
+    
+}
