--- a/home/about us/privacy policy/style.css
+++ b/home/about us/privacy policy/style.css
@@ -1,24 +1,38 @@
-@charset "utf-8"
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 body{
-    background: #EBECF0;
-    font-family: candara;
-    width: 100%;
-    height: 100%;
+	margin: 0;
+	padding: 0;
+	font-family: Century Gothic;
+	
+}
+.header{
+	height: 100vh;
+	width: 100%;
+	background: url("image.jpg")no-repeat;
+	/*background-color: red;*/
+	background-size: cover;
+	background-position: center;
+}
+.main{
+	width: 50%;
+	background: rgba(0, 0, 0, 0.7);
+	color: #ffffff;
+	text-align: center;
+	padding: 50px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+.btn{
+	padding: 10px 20px;
+	font-family: Century Gothic;
+	font-size: large;
+	font-weight: 500;
+	border : none;
+	outline: none;
+	background: #ffffff;
+	border-radius: 8px;
+	cursor: pointer;
+	transition: 0.3s ease-in-out; 
 }
 
-main{
-    width: 60%;
-    height: auto;
-    margin: 30px auto;
-    padding: 20px 40px;
-    background:#EBECF0 ;
-    box-shadow: 7px 7px 15px rgba(55,84,170,.15),-7px -7px 4px rgba (255,255,255,1),0px 0px 4px rgba(255,255,255,.2) !important;
-            
-}
