--- a/Agent signup form/signup.css
+++ b/Agent signup form/signup.css
@@ -11,6 +11,14 @@ body
     padding: 30px;
 }
 
+.register-left img
+{
+    margin-top: 60px;
+    margin-bottom: 18px;
+    width: 80px;
+
+}
+
 .register-left p
 {
     padding: 20px 20px 0;
