--- a/Contact us/style/style.css
+++ b/Contact us/style/style.css
@@ -16,7 +16,7 @@
 
 
     #contact-section{
-      background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.9)),url(../imgs/contact.jpg);
+      background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.9)),url(../imgs/1.jpg);
       background-size: cover;
       background-position: center;
       height: 100%;
