--- a/Nav bar/style.css
+++ b/Nav bar/style.css
@@ -60,5 +60,12 @@ button
     background-color: rgba(0,136,169,1);
     border: none;
     border-radius: 50px;
-    
+    cursor: pointer; 
+    transition: all 0.3s ease 0s;
+
+}
+
+button:hover 
+{
+    background-color:rgba(0,136,169,0.8);
 }
