--- a/table/table.css
+++ b/table/table.css
@@ -14,7 +14,8 @@ table,tr, td{
 width: 100%;
 padding-right:0px;
 cursor: pointer;
-box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+text-align: center;
+
 
 }
 .table div:hover{
@@ -46,6 +47,8 @@ width: 25%;
 	background-size: cover;
 	height: 100%;
 	width: 100%;
+	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+
 }
 
 .d2{
@@ -53,6 +56,8 @@ width: 25%;
 	background-size: cover;
 	height: 100%;
 	width: 100%;
+	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+
 }
 
 .d3{
@@ -60,6 +65,7 @@ width: 25%;
 	background-size: cover;
 	height: 100%;
 	width: 100%;
+	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
 
 }
 
@@ -68,6 +74,7 @@ width: 25%;
 	background-size: cover;
 	height: 100%;
 	width: 100%;
+	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
 }
 
 .d5{
@@ -75,6 +82,7 @@ width: 25%;
 	background-size: cover;
 	height: 100%;
 	width: 100%;
+	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
 }
 
 .d6{
@@ -82,24 +90,28 @@ width: 25%;
 	background-size: cover;
 	height: 100%;
 	width: 100%;
+	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
 }
 .d7{
 	background-image: url("images/a.jpg");
 	background-size: cover;
 	height: 100%;
 	width: 100%;
+	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
 }
 .d8{
 	background-image: url("images/a.jpg");
 	background-size: cover;
 	height: 100%;
 	width: 100%;
+	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
 }
 .d9{
 	background-image: url("images/a.jpg");
 	background-size: cover;
 	height: 100%;
 	width: 100%;
+	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
 }
 
 /*Topic Div*/
