--- a/home/Explore/beach/Mirissa/mirissa.css
+++ b/home/Explore/beach/Mirissa/mirissa.css
@@ -198,9 +198,10 @@ a.active,a:hover{
 .bigmap{
   height:500px;
   /*background-color:#219c2c;*/
+  width: 100%
     padding-left: 0px;
     margin: 0px;
-    
+   
     /*background-color: #f4f4f4;*/
     
 }
