--- a/home/Explore/beach/Hikkaduwa/mirissa.css
+++ b/home/Explore/beach/Hikkaduwa/mirissa.css
@@ -197,7 +197,8 @@ a.active,a:hover{
 }/************************************************************************************/
 .bigmap{
   height:500px;
-  /*background-color:#219c2c;*/
+  width: 100%;
+    /*background-color:#219c2c;*/
     padding-left: 0px;
     margin: 0px;
     
@@ -213,7 +214,7 @@ a.active,a:hover{
   float: left;
   top: 30px;
   left:50px;
-  margin-left: 30px;
+  margin-left: 10%;
   margin-top: 20px;
   padding: 10px;
     
@@ -227,7 +228,7 @@ a.active,a:hover{
   float: left;
   top: 30px;
   left:450px;
-  margin-left: 30px;
+  margin-left: 5%;
   margin-top: 20px;
   padding: 10px;
     border-radius: 5%;
@@ -235,12 +236,12 @@ a.active,a:hover{
 
 .mapdiv3{
  
-  /*background-color:#219c2c;*/
+  background-color:#219c2c;
   height: 400px;
   width: 400px;
   float: left;
   top: 30px;
-  margin-left: 30px;
+  margin-left: 10%;
   margin-top: 20px;
   padding: 10px;
   border-radius: 5%;
