--- a/Mirissa/mirissa.css
+++ b/Mirissa/mirissa.css
@@ -195,16 +195,16 @@ a.active,a:hover{
     background: #2acf38;
     transition: .5s; 
 }
-/************************************************************************************/
+/************************************************************************/
 .bigmap{
   height:500px;
-  /*background-color:#219c2c;*/
+
     width: 100%
     padding-left: 0px;
     margin: 0px;
    
    
-    
+    *
 }
 
 .mapdiv1{
