--- a/new templet/template.css
+++ b/new templet/template.css
@@ -5,11 +5,26 @@ body{
 
 /**/
 
-* {box-sizing: border-box}
+/* * {box-sizing: border-box} */
 body {font-family: Verdana, sans-serif; margin:0}
 .mySlides {display: none}
 img {vertical-align: middle;}
 
+.row1 , .h1-360{
+	
+	  color: #219c2c;
+	  text-align: center;
+}
+.placename{
+  width: 100%;
+  height:50px;
+  text-align: center;
+     color: white;
+   text-shadow: 2px 2px 4px #000000;
+  background-color: #219c2c;
+   background: linear-gradient(to top, #2acf38 0%, #219c2c  100%)
+ 
+}
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
@@ -81,10 +96,11 @@ img {vertical-align: middle;}
   top: 120%;
   left: 15%;
   text-align: center;
-  width: 1000px;*/
-  position:relative;
-  max-width: 1000px;
-  margin-left: 15%;
+  width: 1000px;
+  position:relative;*/
+  width: 95%;
+  text-align: center;
+  margin: 20px;
 
 
 }
@@ -134,6 +150,7 @@ img {vertical-align: middle;}
 }
 
 /* Fading animation */
+
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
@@ -195,28 +212,26 @@ a.active,a:hover{
     background: #2acf38;
     transition: .5s; 
 }
-/************************************************************************/
-.bigmap{
-  height:500px;
 
-    width: 100%
-    padding-left: 0px;
-    margin: 0px;
-   
-   
-    *
+/*******************************/
+table{
+  border: none;
+  border-collapse: collapse;
+  margin-left:1%;
+  margin-right:1%;
+
 }
 
 .mapdiv1{
   
   /*background-color:#219c2c;*/
 
-  height: 350px;
-  width: 350px;
+  height: 400px;
+  width: 400px;
   float: left;
   top: 10px;
 
-  margin-left: 0%;
+  
   margin-top: 1%;
   padding: 20px;
     
@@ -226,12 +241,12 @@ a.active,a:hover{
  
   /*background-color:#219c2c;*/
  
-  height: 350px;
-  width: 350px;
+  height: 400px;
+  width: 400px;
   float: left;
   top: 30px;
   left:75%;
-  margin-left: 6%;
+
   margin-top: 1%;
   padding: 20px;
   
@@ -240,12 +255,12 @@ a.active,a:hover{
 .mapdiv3{
  
  
-  height: 350px;
-  width: 350px;
+  height: 400px;
+  width: 400px;
   float: left;
   top: 30px;
   left: 0%;
-  margin-left: 6%;
+
   margin-top: 1%;
   padding: 20px;
  
@@ -254,33 +269,37 @@ a.active,a:hover{
 
 .map1{
 
-  height: 350px;
-  width: 350px;
+  height: 400px;
+  width: 400px;
   float: left;
-  margin: 10px;
-  margin-left: 38px;
+  margin: 0px;
+  margin-left: 0%;
     box-shadow: 2px 2px 4px #000000;
 }
 .map2{
 
-  height: 350px;
-  width: 350px;
+  height: 400px;
+  width: 400px;
   float: left;
-  margin: 10px;
-  margin-left: 38px;
+  margin: 0px;
+  margin-left: 0%;
 
     box-shadow: 2px 2px 4px #000000;
 }
 
 .map3{
 
-  height: 350px;
-  width: 350px;
+  height: 400px;
+  width: 400px;
   float: left;
-  margin: 10px;
-  margin-left: 10%;
+  margin: 0px;
+  margin-left: 0%;
 
    box-shadow: 2px 2px 4px #000000;
+}
+
+.row1{
+	text-align: center;
 }
 
 .img360{
@@ -289,34 +308,4 @@ a.active,a:hover{
   margin-left: 5%;
    box-shadow: 3px 3px 3px #000000;
 
-}
-
-
-.placename{
-  width: 100%;
-  height:50px;
-  background-color: #219c2c;
-   background: linear-gradient(to top, #2acf38 0%, #219c2c  100%)
- 
-}
-.h1name{
-   color: white;
-   text-align: center;
-   text-shadow: 2px 2px 4px #000000;
-}
-.h2name{
-   color: #219c2c;
-   text-align: center;
- 
-   }
-.divvv{
-/*background-color:  #f5ffee;*/
-	color: black;
-	height: 800px;
-}
- 
-.h1{
-  color:Black;
-  font-family: cooper black;
-  text-align: center;
 }
