--- a/new templet/template.css
+++ b/new templet/template.css
@@ -217,8 +217,8 @@ a.active,a:hover{
 table{
   border: none;
   border-collapse: collapse;
-  margin-left:1%;
-  margin-right:1%;
+  margin-left:auto;
+  margin-right:auto;
 
 }
 
