--- a/home/index/includes/style/parallex-style.css
+++ b/home/index/includes/style/parallex-style.css
@@ -142,7 +142,7 @@ nav .container{
     transform: translateY(8px);
 }
 */
-.big-title{
+/*.big-title{
     position: absolute;
     z-index: 30;
     line-height: 4rem;
@@ -152,7 +152,7 @@ nav .container{
     font-size: 5rem;
     font-weight: 600;
     color: #fff;
-}
+}*/
 
 section{
     width: 100%;
@@ -194,14 +194,14 @@ section .container > *{
     position: relative;
 }
 
-.border{
+/*.border{
     position: absolute;
     width: 0%;
     height: 3px;
     background-color: #fff;
     bottom: 0;
     left: 0;
-}
+}*/
 
 .shadow{
     position: absolute;
@@ -224,9 +224,9 @@ section .container > *{
 }
 
 @media(max-width: 600px){
-    .big-title{
+    /*.big-title{
         font-size: 3rem
-    }
+    }*/
 
     .text{
         font-size: .8rem;
