--- a/home/index/includes/style/index-style.css
+++ b/home/index/includes/style/index-style.css
@@ -39,14 +39,14 @@ body{
 }
 
 ol {
-    background: linear-gradient(to bottom, gold, gold) no-repeat 0 0;
-    background-size: 4px 0%;
-    transition: 2s;
+    background: linear-gradient(to bottom, rgb(40, 167, 69), rgb(40, 167, 69)) no-repeat 0 0;
+    background-size: 500px 0%;
+    transition: 1.5s;
     margin:1em;
   }
   
   ol:hover {
-    background-size: 4px 100%;
+    background-size: 500px 100%;
   }
 
   .content opacity{
