--- a/Top Agents/topagent.css
+++ b/Top Agents/topagent.css
@@ -11,3 +11,19 @@
     overflow: hidden;
     position: relative;
 }
+.text
+{
+    text-align: center;
+    margin: 40px 0 150px 0;
+}
+.text h1
+{
+    font-size: 35px;
+    font-weight: normal;
+    margin-bottom: 20px;
+}
+.text p
+{
+    font-size: 18px;
+    color: gray;
+}
