--- a/Top Agents/topagent.css
+++ b/Top Agents/topagent.css
@@ -27,3 +27,10 @@
     font-size: 18px;
     color: gray;
 }
+.cards
+{
+    width: 100%;
+    padding: 0 7%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
