--- a/Top Agents/topagent.css
+++ b/Top Agents/topagent.css
@@ -36,3 +36,10 @@
     grid-gap: 0 60px;
     
 }
+.card 
+{
+    position: relative;
+    height: 300px;
+    border-radius: 20px;
+    box-shadow: 0 5px 7px #e2e2e2;
+}
