--- a/Top Agents/topagent.css
+++ b/Top Agents/topagent.css
@@ -80,3 +80,12 @@
     font-size: 18px;
     color: gray;
 }
+.links a 
+{
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    font-size: 18px;
+}
