--- a/Top Agents/topagent.css
+++ b/Top Agents/topagent.css
@@ -44,10 +44,15 @@
     box-shadow: 0 5px 7px #e2e2e2;
     user-select: none;
     cursor: pointer;
+    transition: .5s;
 }
 .card:hover
 {
     box-shadow: 0 5px 30px #e2e2e2;
+}
+.card:hover img
+{
+    transform: scale(1.02);
 }
 
 .card img 
