--- a/home/Explore/Catgry/css/anciant/table.css
+++ b/home/Explore/Catgry/css/anciant/table.css
@@ -25,9 +25,6 @@ cursor: pointer;
  	transform: scale(1.07, 1.07);
 }
 
-.table h2:hover{
-	transform: scale(0.9,0.9);
-}
 
 .left{
 	height: 500px;
@@ -114,14 +111,16 @@ width: 25%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
 }
 
-/*Topic Div*/
 
-.n1{
-	opacity: 60%;
-	width: 100%;
-	background-color: lightgray;
-}
 
 .d1 div:hover{
 	 transform: scale(1.1, 1.1);
 	}
+
+.topic{
+	text-align: center;
+	color: white;
+	 font-weight: bold;
+	    text-shadow: 2px 2px 5px #000000;
+	     /*font-size: 30px;
+}
