--- a/Top Agents/topagent.css
+++ b/Top Agents/topagent.css
@@ -8,7 +8,7 @@
 {
     width: 100%;
     height: 100vh;
-    overflow: hidden;
+    /*overflow: hidden;*/   
     position: relative;
 }
 .text
@@ -30,7 +30,7 @@
 .cards
 {
     width: 100%;
-    padding: 0 7%;
+    padding: 0 0%;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     grid-gap: 0 60px;
@@ -45,6 +45,7 @@
     user-select: none;
     cursor: pointer;
     transition: .5s;
+    margin: 20px;
 }
 .card:hover
 {
