--- a/home/Explore/Catgry/css/anciant/table.css
+++ b/home/Explore/Catgry/css/anciant/table.css
@@ -48,7 +48,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
-	 border-radius: 25px;
+	 border-radius: 10px;
 }
 
 .d2{
@@ -57,6 +57,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	border-radius: 10px;
 }
 
 .d3{
@@ -65,6 +66,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	border-radius: 10px;
 }
 
 .d4{
@@ -73,6 +75,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	border-radius: 10px;
 }
 
 .d5{
@@ -81,6 +84,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	border-radius: 10px;
 }
 
 .d6{
@@ -89,6 +93,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	border-radius: 10px;
 }
 .d7{
 	background-image: url("images/g.jpg");
@@ -96,6 +101,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	border-radius: 10px;
 }
 .d8{
 	background-image: url("images/h.jpg");
@@ -103,6 +109,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	border-radius: 10px;
 }
 .d9{
 	background-image: url("images/i.jpg");
@@ -110,6 +117,8 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	border-radius: 10px;
+}
 }
 
 
