--- a/home/Explore/Catgry/css/tour/table.css
+++ b/home/Explore/Catgry/css/tour/table.css
@@ -122,5 +122,9 @@ width: 25%;
 	color: white;
 	 font-weight: bold;
 	    text-shadow: 2px 2px 5px #000000;
-	     /*font-size: 30px;
+	     /*font-size: 30px;*/
+}
+
+a{
+	text-decoration: none;
 }
