--- a/home/Explore/Catgry/css/waterfall/table.css
+++ b/home/Explore/Catgry/css/waterfall/table.css
@@ -48,6 +48,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	 border-radius: 10px;
 }
 
 .d2{
@@ -56,6 +57,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	 border-radius: 10px;
 }
 
 .d3{
@@ -64,6 +66,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	 border-radius: 10px;
 }
 
 .d4{
@@ -72,6 +75,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	 border-radius: 10px;
 }
 
 .d5{
@@ -80,6 +84,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	 border-radius: 10px;
 }
 
 .d6{
@@ -95,6 +100,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	 border-radius: 10px;
 }
 .d8{
 	background-image: url("images/h.jpg");
@@ -102,6 +108,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	 border-radius: 10px;
 }
 .d9{
 	background-image: url("images/i.jpg");
@@ -109,6 +116,7 @@ width: 25%;
 	height: 100%;
 	width: 100%;
 	box-shadow:  5px 5px 15px rgba(0,0,0,0.9);
+	 border-radius: 10px;
 }
 
 
