--- a/home/index/Travel plan/plan.css
+++ b/home/index/Travel plan/plan.css
@@ -45,4 +45,14 @@ h3
     color: white;
     font-size: 19px:
 }
+.form-control 
+{
+    background: transparent;
+    border-radius: 0px;
+    border: 0px;
+    border-bottom: 1px solid white;
+    font-size: 18px;
+    margin-top: 15px;
+    height: 40px;
+}
  
