--- a/home/index/Travel Plan/plan.css
+++ b/home/index/Travel Plan/plan.css
@@ -78,5 +78,21 @@ form
     border-radius: 6px;
     padding: 0 22px;
     font-size: 16px;
+    color: #555;
 
+}
+
+.firstlabel
+{
+    position: relative;
+    color: #E5E5E5;
+    text-transform: capitalize;
+    font-size: 14px;
+    left: 203px;
+    top: -45px;
+}
+
+.lastlabel
+{
+    
 }
