--- a/home/index/Travel Plan/plan.css
+++ b/home/index/Travel Plan/plan.css
@@ -94,5 +94,51 @@ form
 
 .lastlabel
 {
-    
+    position: relative;
+    color: #E5E5E5;
+    text-transform: capitalize;
+    font-size: 14px;
+    left: 493px;
+    top: -78px;
+
 }
+
+.email
+{
+    position: relative;
+    left: 200px;
+    top: -37px;
+    line-height: 40px;
+    width: 480px;
+    border-radius: 6px;
+    padding: 0 22px;
+    font-size: 16px;
+    color: #555;
+}
+
+.code
+{
+    position: relative;
+    left: 200px;
+    top: -37px;
+    line-height: 40px;
+    width: 95px;
+    border-radius: 6px;
+    padding: 0 22px;
+    font-size: 16px;
+    color: #555;
+}
+
+.number
+{
+    position: relative;
+    left: 200px;
+    top: -37px;
+    line-height: 40px;
+    width: 280px;
+    border-radius: 6px;
+    padding: 0 22px;
+    font-size: 16px;
+    color: #555;
+}
+
