--- a/home/index/Travel Plan/plan.css
+++ b/home/index/Travel Plan/plan.css
@@ -141,4 +141,37 @@ form
     font-size: 16px;
     color: #555;
 }
+.area-code
+{
+    position: relative;
+    color: #E5E5E5;
+    text-transform: capitalize;
+    font-size: 16px;
+    left: 110px;
+    top: -4px;
+
+}
+.phone-number
+{
+    position: relative;
+    color: #E5E5E5;
+    text-transform: capitalize;
+    font-size: 16px;
+    left: -10px;
+    top: -4px;
+
+}
+
+.trip-plan
+{
+    position: relative;
+    left: 200px;
+    top: -37px;
+    line-height: 40px;
+    width: 480px;
+    border-radius: 6px;
+    padding: 0 22px;
+    font-size: 16px;
+    color: #555;
+}
 
