--- a/home/index/Travel Plan/plan.css
+++ b/home/index/Travel Plan/plan.css
@@ -166,7 +166,7 @@ form
 {
     position: relative;
     left: 200px;
-    top: -37px;
+    top: -52px;
     line-height: 40px;
     width: 480px;
     border-radius: 6px;
@@ -174,4 +174,34 @@ form
     font-size: 16px;
     color: #555;
 }
+
+#customer
+{
+   margin-left: 25px;
+   color: white;
+   font-size: 18px;
+}
+
+.male
+{
+    display: inline-block;
+    padding-right: 70px;
+    font-size: 25px;
+    margin-left: 25px;
+    margin-top: 15px;
+    color: white
+
+}
+
+.container 
+{
+   margin-left: 25px;
+   color: white;
+   font-size: 18px;
+}
+
+
+
+
+
 
