--- a/home/index/Travel Plan/plan.css
+++ b/home/index/Travel Plan/plan.css
@@ -202,7 +202,7 @@ form
 
 button
 {
-   background-color: red;
+   background-color: #3BAF9F;
    display: block;
    margin: 20px 0px 0px 20px;
    text-align: center;
@@ -214,6 +214,13 @@ button
    cursor: pointer;
    transition: 0.25px;
 
+}
+
+
+
+button:hover 
+{
+    background-color: #5390F5;
 }
 
 
