--- a/home/Explore/test 1.css
+++ b/home/Explore/test 1.css
@@ -73,6 +73,7 @@ body {
     background-size: cover;
 }
 
+
 /*Waterfalls*/
 .card-image7 {
     grid-area: image;
@@ -82,6 +83,23 @@ body {
     background-size: cover;
 }
 
+/*Parks*/
+.card-image8 {
+    grid-area: image;
+    background: url("images/g.jpg");
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-size: cover;
+}
+
+/*Shopping*/
+.card-image9 {
+    grid-area: image;
+    background: url("images/4.jpg");
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-size: cover;
+}
 
 
 .card-text {
