--- a/home/index/Travel Plan/plan.css
+++ b/home/index/Travel Plan/plan.css
@@ -25,13 +25,22 @@ p
 
 .regform 
 {
+
     width: 800px;
-    background-color:rgb(0,0,0,0.6);
+    height: 130px;
+    background-color:rgba(116, 116, 116, 0.6);
     margin: auto;
     color: #ffffff;
     padding: 10px 0px 10px 0px;
     text-align: center;
     border-radius: 15px 15px 0px 0px;
+}
+
+.regform h1{
+    position: relative;
+    top: -200%;
+    color: white;
+    text-shadow: 2px 2px 8px #1f1f1f;
 }
 
 .main
@@ -54,7 +63,7 @@ form
 {
     margin-left: 25px;
     margin-top: 30px;
-    width: 125px;
+    width: 500px;
     color: white;
     font-size: 18px;
     font-weight: 700;
@@ -103,7 +112,7 @@ form
 
 }
 
-.email
+.places
 {
     position: relative;
     left: 200px;
@@ -223,8 +232,9 @@ button:hover
     background-color: #5390F5;
 }
 
-
-
-
+#agent{
+    position: relative;
+    left: 15%;
+}
 
 
