--- a/top agent/top.css
+++ b/top agent/top.css
@@ -70,3 +70,10 @@ section
     margin: 2rem 0;
     box-shadow: .5rem .5rem 3rem rgba(0,0,0,0.2);
 }
+
+.card .card-img
+{
+    width: 100%;
+    height: 26rem;
+    object-fit: cover;
+}
