--- a/top agent/top.css
+++ b/top agent/top.css
@@ -76,4 +76,22 @@ section
     width: 100%;
     height: 26rem;
     object-fit: cover;
+    -webkit-clip-path: polygon(0 0, 100% 0,100% 78%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 71%, 0% 100%);
+}
+
+.profile-img
+{
+    width: 15rem;
+    height: 15rem;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-top: -11rem;
+    z-index: 999;
+    border: 1rem solid #ebeef8;
+}
+
+.card h1
+{
+    
 }
