--- a/top agent/top.css
+++ b/top agent/top.css
@@ -149,3 +149,13 @@ section
     margin-top: 1.5rem;
     border-top: 1px solid rgba(0,0,0,.1);
 }
+
+.social-media i
+{
+    font-size: 3rem;
+}
+
+.fa-facebook-square
+{
+    color: #3b5999;
+}
