--- a/top agent/top.css
+++ b/top agent/top.css
@@ -159,3 +159,17 @@ section
 {
     color: #3b5999;
 }
+
+.fa-twitter-square
+{
+    color: #55acee;
+}
+
+.fa-instagram
+{
+    color: #e6683c;
+}
+.fa-google-plus-square
+{
+    color: #dd4b39;
+}
