--- a/top agent/top.css
+++ b/top agent/top.css
@@ -153,6 +153,7 @@ section
 .social-media i
 {
     font-size: 3rem;
+    transition: color .5s;
 }
 
 .fa-facebook-square
@@ -172,4 +173,14 @@ section
 .fa-google-plus-square
 {
     color: #dd4b39;
+}
+
+
+
+.fa-facebook-square:hover,
+.fa-twitter-square:hover,
+.fa-instagram:hover,
+.fa-google-plus-square:hover
+{
+   color: #45e19f; 
 }
