--- a/top agent/top.css
+++ b/top agent/top.css
@@ -207,9 +207,34 @@ section
         to{
             opacity: 1;
         }
-        .card:nth-child(1){
-            animtion: fadeIn .5s .5s backwards;
-        }
+
+
+        
+       
+        
+        
     }
+    .card:nth-child(1)
+    {
+        animation:fadeIn .5s .5s backwards;
+    }
+    .card:nth-child(2)
+    {
+        animation:fadeIn .5s 1s backwards;
+    }
+    .card:nth-child(3)
+    {
+        animation:fadeIn .5s 1.5s backwards;
+    }
+    .card:nth-child(4)
+    {
+        animation:fadeIn .5s 2s backwards;
+    }
+
+    .card:hover
+    {
+        transform: scale(1.05);
+    }
+   
     
 }
