--- a/top agent/top.css
+++ b/top agent/top.css
@@ -13,6 +13,11 @@ html
     font-size: 10px;
     font-family: "Roboto", sans-serif;
 }
+body
+{
+    overflow: hidden;
+}
+
 
 a
 {
@@ -198,6 +203,7 @@ section
     .card
     {
         margin: 2rem;
+        transition: transform .5s;
     }
 
     @keyframes fadeIn {
@@ -238,3 +244,8 @@ section
    
     
 }
+
+
+
+
+
