--- a/home/index/includes/style/index-style.css
+++ b/home/index/includes/style/index-style.css
@@ -125,3 +125,13 @@ ol {
   text-decoration: none;
   cursor: pointer;
 }
+
+.logx{
+  background: green;
+  height: 30px;
+
+}
+
+.logc{
+  height: 250px;
+}
