--- a/home/index/includes/style/index-style.css
+++ b/home/index/includes/style/index-style.css
@@ -128,12 +128,12 @@ ol {
 
 .logx{
   background: green;
-  height: 40px;
+  height: 3em;
 
 }
 
 .logc{
-  height: 250px;
+  height: 15em;
 }
 
 .loging{
