--- a/home/Explore/Catgry/categories/Anciant Cites/anuradhapura/template.css
+++ b/home/Explore/Catgry/categories/Anciant Cites/anuradhapura/template.css
@@ -309,3 +309,49 @@ table{
    box-shadow: 3px 3px 3px #000000;
 
 }
+/***************fav icon****/
+
+.this{
+  display: none;
+}
+
+.star-widget input{
+  display: none;
+}
+
+
+.star-widget label{
+  font-size: 40px;
+  color:#444;
+  content: '\f005';
+  font-family: fontAwesome;
+  padding: 10px;
+  margin-left: 10px;
+  float: right;
+  transition: all 0.2s ease;
+
+}
+
+input:not(:checked) ~ label:hover,
+input:not(:checked) ~ label:hover ~ label{
+  color: #F1184C;
+}
+
+input:checked ~ label{
+  color: #fd4;
+}
+input#rate-1:checked ~label{
+  color: #F1184C;
+  text-shadow: 0 0 5px #952;
+}
+
+/**form**/
+
+#rate-5:checked ~ form header:before{
+  content: "I just hate it";
+}
+
+.post1{
+  background: yellow;
+  left:10px;
+}
