--- a/home/Explore/Catgry/categories/Anciant Cites/anuradhapura/template.css
+++ b/home/Explore/Catgry/categories/Anciant Cites/anuradhapura/template.css
@@ -152,22 +152,23 @@ color: white;
 
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: none;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: none;
 }
+
 .pic{
   width:100%;
   height: 500px;
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
+  from {opacity: 0} 
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .4} 
+  from {opacity: 0} 
   to {opacity: 1}
 }
 
