--- a/home/Explore/Catgry/categories/Anciant Cites/anuradhapura/template.css
+++ b/home/Explore/Catgry/categories/Anciant Cites/anuradhapura/template.css
@@ -45,10 +45,45 @@ img {vertical-align: middle;}
 
 }
 
-.favicon{
+.fav-icon{
   position: absolute;
   right:6px;
   top: 15px;
+}
+
+/***************fav icon****/
+
+.this{
+  display: none;
+}
+
+.star-widget input{
+  display: none;
+}
+
+
+.star-widget label{
+  font-size: 30px;
+  color:#444;
+  content: '\f005';
+  font-family: fontAwesome;
+ 
+  transition: all 0.2s ease;
+
+}
+
+input:not(:checked) ~ label:hover,
+input:not(:checked) ~ label:hover ~ label{
+  color: #F1184C;
+}
+
+input:checked ~ label{
+  color: #fd4;
+  
+}
+input#rate-1:checked ~label{
+  color: #F1184C;
+  text-shadow: 0 0 5px #952;
 }
 
 
@@ -336,39 +371,6 @@ table{
   margin-left: 5%;
    box-shadow: 3px 3px 3px #000000;
 
-}
-/***************fav icon****/
-
-.this{
-  display: none;
-}
-
-.star-widget input{
-  display: none;
-}
-
-
-.star-widget label{
-  font-size: 30px;
-  color:#444;
-  content: '\f005';
-  font-family: fontAwesome;
- 
-  transition: all 0.2s ease;
-
-}
-
-input:not(:checked) ~ label:hover,
-input:not(:checked) ~ label:hover ~ label{
-  color: #F1184C;
-}
-
-input:checked ~ label{
-  color: #fd4;
-}
-input#rate-1:checked ~label{
-  color: #F1184C;
-  text-shadow: 0 0 5px #952;
 }
 
 /**form**/
