--- a/home/index/includes/style/parallex-style.css
+++ b/home/index/includes/style/parallex-style.css
@@ -42,41 +42,41 @@ header:after{
 
 .mountain1{
     position: absolute;
-    bottom: -6.25em;
-    width: 1300px;
+    bottom: -6.25rem;
+    width: 81.25rem;
     right: -150;
     z-index: 19;
 }
 
 .person{
     position: absolute;
-    width: 650px;
-    bottom: -100px;
-    left: -70px;
+    width: 40.625rem;
+    bottom: -6.25rem;
+    left: -4.375rem;
     z-index: 20;
 }
 
 .mountain2{
     position: absolute;
-    width: 1300px;
-    bottom: -130px;
-    left: -5px;
+    width: 81.25rem;
+    bottom: -8.125rem;
+    left: -0.3125rem;
     z-index: 18;
 }
 
 .mountain3{
     position: absolute;
-    width: 1250px;
-    bottom: -120px;
-    right: -10px;
+    width: 78.125rem;
+    bottom: -7.5rem;
+    right: -0.625rem;
     z-index: 17;
 }
 
 .sky{
     position: absolute;
-    width: 1300px;
-    bottom: -200px;
-    right: -30px;
+    width: 81.25rem;
+    bottom: -12.5rem;
+    right: -1.875rem;
 }
 /*
 nav{
