--- a/home/index/Travel Plan/plan.css
+++ b/home/index/Travel Plan/plan.css
@@ -6,6 +6,7 @@
 body
 {
     background-image: url(2.jpg);
+    background-image-opacity: 50%;
     background-size: cover;
     background-attachment: fixed;
     font-family: sans-serif;
