--- a/home/index/includes/style/parallex-style.css
+++ b/home/index/includes/style/parallex-style.css
@@ -74,9 +74,9 @@ header:after{
 
 .sky{
     position: absolute;
-    width: 81.25rem;
+    width: 100%;
     bottom: -12.5rem;
-    right: -1.875rem;
+    right: 0%;
 }
 /*
 nav{
