--- a/home/Explore/test 1.css
+++ b/home/Explore/test 1.css
@@ -171,9 +171,11 @@ body {
     background-size: cover;
 
    position: absolute;
-   margin-top: 1200px;
+   margin-top: 50px;
+   margin-left: 25%;
     width: 500px;
     height: 500px;
+  
    
 }
 
