--- a/home/Explore 2/explore.css
+++ b/home/Explore 2/explore.css
@@ -5,3 +5,11 @@ body
     background: #262626;
     font-family: sans-serif;
 }
+
+.container
+{
+    width: 1200px;
+    min-height: 500px;
+    background: #fff;
+    margin: 70px auto 0;
+}
