--- a/home/Explore 2/explore.css
+++ b/home/Explore 2/explore.css
@@ -12,4 +12,16 @@ body
     min-height: 500px;
     background: #fff;
     margin: 70px auto 0;
+    display: flex;
+}
+
+.container .box
+{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    background: #ff0;
+    margin: 10px;
+    box-sizing: border-box;
+    display: inline-block;
 }
