--- a/home/Explore 2/explore.css
+++ b/home/Explore 2/explore.css
@@ -8,12 +8,12 @@ body
 
 .container
 {
-    width: 1200px;
-    min-height: 500px;
-    background: #fff;
+    width: 1500px;
+    
     margin: 70px auto 0;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .container .box
